CREATE TABLE "user" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "description" text,
  "photo_url" varchar,
  "city" varchar,
  "interests" text
);

CREATE TABLE "post" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "description" text,
  "media_url" varchar,
  "created_at" datetime
);

CREATE TABLE "like" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "post_id" int,
  "user_id" int
);

CREATE TABLE "comment" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "post_id" int,
  "user_id" int,
  "text" text,
  "created_at" datetime
);

CREATE TABLE "relationship" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "friend_id" int,
  "type" enum(friend,follower,romantic)
);

CREATE TABLE "message" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sender_id" int,
  "receiver_id" int,
  "chat_id" int,
  "content" text,
  "read" boolean,
  "created_at" datetime
);

CREATE TABLE "chat" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_1_id" int,
  "user_2_id" int,
  "created_at" datetime
);

CREATE TABLE "media" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "media_type" enum(photo,audio,video),
  "url" varchar,
  "created_at" datetime
);

ALTER TABLE "post" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "like" ADD FOREIGN KEY ("post_id") REFERENCES "post" ("id");

ALTER TABLE "like" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "comment" ADD FOREIGN KEY ("post_id") REFERENCES "post" ("id");

ALTER TABLE "comment" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "relationship" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");

ALTER TABLE "relationship" ADD FOREIGN KEY ("friend_id") REFERENCES "user" ("id");

ALTER TABLE "message" ADD FOREIGN KEY ("sender_id") REFERENCES "user" ("id");

ALTER TABLE "message" ADD FOREIGN KEY ("receiver_id") REFERENCES "user" ("id");

ALTER TABLE "message" ADD FOREIGN KEY ("chat_id") REFERENCES "chat" ("id");

ALTER TABLE "chat" ADD FOREIGN KEY ("user_1_id") REFERENCES "user" ("id");

ALTER TABLE "chat" ADD FOREIGN KEY ("user_2_id") REFERENCES "user" ("id");

ALTER TABLE "media" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id");
